# server/docs/openapi.json
@@ -57,7 +57,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Company"
+                  "$ref": "#/components/schemas/CompanyDetail"
                 }
               }
             }
@@ -165,6 +165,50 @@
           },
           "performer": {
             "$ref": "#/components/schemas/Stonker"
+          }
+        }
+      },
+      "CompanyDetail": {
+        "type": "object",
+        "required": [
+          "id",
+          "name",
+          "performer",
+          "value_history"
+        ],
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "name": {
+            "type": "string"
+          },
+          "performer": {
+            "$ref": "#/components/schemas/Stonker"
+          },
+          "value_history": {
+            "type": "array",
+            "items":  {
+              "$ref": "#/components/schemas/CompanyValue"
+            }
+          }
+        }
+      },
+      "CompanyValue": {
+        "type": "object",
+        "required": [
+          "datetime",
+          "value"
+        ],
+        "properties": {
+          "datetime": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "value": {
+            "type": "integer",
+            "format": "int64"
           }
         }
       },
